Fixed z-indexing for ie10

--- a/styleguide_assets/aigis_assets/styles/theme.css
+++ b/styleguide_assets/aigis_assets/styles/theme.css
@@ -432,7 +432,7 @@ ul[data-path-depth="2"] {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 999;
+	z-index: 9999;
 	background: white;
 	overflow: scroll;
 }
